nav bar overflow bug resolved

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   font-family: "Roboto Mono", monospace;
+  overflow-x: hidden;
 }
 
 code {
